# mc68000

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  prepareCMake.ps1
.github/workflows/: cmake-multi-platform.yml  linux-build.yml
asm/: .gitignore  CMakeLists.txt  asm68000.g4  asmResult.cpp  asmResult.h  asmparser.cpp  asmparser.h  errors.h  lexer68000.g4  listener.cpp  listener.h  listingGenerator.cpp  listingGenerator.h  main.cpp  parser68000.g4  test.68k  test.68k.1  tutorial1bis.68k  visitor.cpp  visitor.h  visitor_directive.cpp
asm/asm68000/: CMakeLists.txt  main.cpp
asm/asm68000test/: .gitignore  CMakeLists.txt  addressingMode.cpp  addressingModeTest.cpp  dc.playlist  directiveTest.cpp  instructionTest.cpp  module.cpp  parserTest.cpp  test.cpp  util.h
asm/examples/: .gitignore  db100.txt  db101.txt  db102.txt  db103.txt  db104.txt  db105.txt  db80.txt  db81.txt  db82.txt  db83.txt  db85.txt  db86.txt  db87.txt  db88.txt  db89.txt  db90.txt  db91.txt  db92.txt  db93.txt  db94.txt  db95.txt  db96.txt  db97.txt  db98.txt  db99.txt  dr81.txt  dr82.txt  dr83.txt  dr84.txt  dr85.txt  dr86.txt  dr87.txt  dr88.txt  game.68k  io.68k  merged.68k  tinybasic.68k  tinybasic.sym  tinybasic.txt
asm/examples/commenter/: commenter.cpp  commenter.sln  commenter.vcxproj
core/: .gitignore  CMakeLists.txt  CMakelists.txt  core.cpp  core.h  cpu.cpp  cpu.h  cpu_debug.cpp  cpu_utils.cpp  disasm.cpp  disasm.h  disasm_utils.cpp  exceptions.h  instructions.cpp  instructions.h  memory.cpp  memory.h  noopcpu.cpp  noopcpu.h  setup.cpp  statusregister.h  traphandler.h
coretest/: .gitignore  CMakeLists.txt  add.68k  addtest.cpp  and.68k  andtest.cpp  asmtest.cpp  bittest.cpp  comparetest.cpp  controlflowtest.cpp  coretest.cpp  coretest.h  cputest.cpp  disasmtest.cpp  divtest.cpp  eor.68k  eortest.cpp  exceptiontest.cpp  lea.68k  movetest.cpp  multest.cpp  noopcputest.cpp  or.68k  ortest.cpp  roltest.cpp  shift.68k  shifttest.cpp  sub.68k  subtest.cpp
cputest/: .gitignore  CMakeLists.txt  CMakeLists.txt_  addtest.cpp  andtest.cpp  bittest.cpp  comparetest.cpp  controlflowtest.cpp  cputest.cpp  cputest.vcxproj  cputest.vcxproj.filters  divtest.cpp  eortest.cpp  exceptiontest.cpp  module.cpp  movetest.cpp  multest.cpp  ortest.cpp  roltest.cpp  shifttest.cpp  subtest.cpp  various.cpp  verifyexecution.cpp  verifyexecution.h
dasmconsole/: .gitignore  cmakelists.txt  main.cpp
dasmtest/: .gitignore  CMakeLists.txt  disasmtest.cpp  module.cpp  offset.cpp  tutorial2.cpp
run68000/: .gitignore  CMakeLists.txt  ataribios.cpp  ataribios.h  emulator.cpp  ibios.h  main.cpp  simplebios.cpp  simplebios.h
run68000lib/: CMakeLists.txt  ataribios.cpp  ataribios.h  atarigemdos.cpp  atarixbios.cpp  biosparameterblock.cpp  biosparameterblock.h  emulator.cpp  emulator.h  ibios.h  osbios.cpp  osbios.h  simplebios.cpp  simplebios.h  trapargs.h
run68000test/: CMakeLists.txt  ataribiostest.cpp  biostest.cpp  module.cpp  osbiostest.cpp
simple/: .gitignore  CMakeLists.txt  emulator.cpp  emulator.h  game.cpp  main.cpp  readme.md  simplebios.cpp  simplebios.h
